plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'net.happykoo'
version = '1.0-SNAPSHOT'

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    lombok = "org.projectlombok"
    boot = "org.springframework.boot"
}

dependencies {
    compileOnly "${lombok}:lombok"
    annotationProcessor "${lombok}:lombok"

    implementation "${boot}:spring-boot-starter-web"
    implementation "${boot}:spring-boot-starter-jdbc"
    implementation "${boot}:spring-boot-starter-security"
    implementation "${boot}:spring-boot-starter-oauth2-client"

    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
    implementation 'commons-io:commons-io:2.10.0'
    implementation 'org.apache.commons:commons-lang3:3.10'
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
    implementation 'mysql:mysql-connector-java:8.0.33'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'io.jsonwebtoken:jjwt:0.12.6'

    testCompileOnly "${lombok}:lombok"
    testAnnotationProcessor "${lombok}:lombok"
    testImplementation "${boot}:spring-boot-starter-test"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
